k8s/hpa1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa1
  namespace: hpa1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hpa1
    spec:
      containers:
        - name: hpa1
          image: busybox
          command: ["/bin/sh"]
          args: ["-c", "dd if=/dev/zero of=/dev/null | dd if=/dev/zero of=/dev/null | dd if=/dev/zero of=/dev/null | dd if=/dev/zero of=/dev/null"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
      restartPolicy: Always
  selector:
    matchLabels:
      app: hpa1
