k8s/appdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdb-service
  labels:
    app: appdb-service
spec:
  ports:
   - port: 5432
     protocol: TCP
  selector:
   app: appdb
