k8s/my-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: my-api
  type: NodePort
