k8s/my-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-api-ingress
spec:
  backend:
    serviceName: my-api-service
    servicePort: 8080
